mengatasi error backend login register

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -20,7 +20,6 @@
         android:orientation="vertical">
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00bcd4"
@@ -31,7 +30,8 @@
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
                 android:layout_height="406dp"
-                android:src="@drawable/logomaterimu" />
+                android:src="@drawable/logomaterimu"
+                android:contentDescription="@string/gambar_home" />
 
             <Button
                 android:id="@+id/btn_mulai"
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/tombol_bulat"
-                android:text="Mulai"
+                android:text="@string/text_mulai"
                 android:textColor="#0278ae" />
 
         </LinearLayout>
