--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
                 android:autofillHints="@string/text_password" />
 
             <Button
-                android:id="@+id/btnkirimLogin"
+                android:id="@+id/btnKirimLogin"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="22dp"
@@ -70,7 +70,7 @@
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/btn_buatakun"
+                android:id="@+id/btnBuatAkun"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="22dp"
