--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".NavigationDrawerActivity"
+    tools:context=".navigationdrawer.NavigationDrawerActivity"
     tools:openDrawer="start">
 
     <LinearLayout
@@ -23,10 +23,15 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/Theme.AppCompat.Light"
             android:elevation="4dp"/>
-        <FrameLayout
+
+        <fragment
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:navGraph="@navigation/nav_graph"
+            tools:ignore="MissingClass" />
+
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
